--- a/src/components/GenreExplorer.css
+++ b/src/components/GenreExplorer.css
@@ -6,6 +6,8 @@
 /* Container */
 .ge {
   box-sizing: border-box;
+  overflow-x: hidden;
+  max-width: 100%;
 }
 
 /* Genre Tabs */
